#include_directories(/usr/include)
add_executable(curltest main.c)
#target_link_libraries(curltest curl)
find_package(CURL)
if(CURL_FOUND)
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(curltest ${CURL_LIBRARY})
else(CURL_FOUND)
message(FATAL_ERROR "CURL library is not found")
endif(CURL_FOUND)


set(mySources viewer.c)
set(optionalSources)
set(optionalLibs)
find_package(JPEG)
if(JPEG_FOUND)
	set(optionalSources ${optionalSources} jpegview.c)
	include_directories(${JPEG_INCLUDE_DIR)})
	set(optionalLibs ${optionalLibs} ${JPEG_LIBRARIES})
	add_definitions(-DENABLE_JPEG_SUPPORT)
endif(JPEG_FOUND)

if(PNG_FOUND)
	set(optionalSources ${optionalSources} pngview.c)
	include_directories(${PNG_INCLUDE_DIR)})
	set(optionalLibs ${optionalLibs} ${PNG_LIBRARIES})
	add_definitions(-DENABLE_PNG_SUPPORT)
endif(PNG_FOUND)

add_executable(viewer ${mySources} ${optionalSources})
target_link_libraries(viewer ${optionalLibs})
